# package.elm-lang.org

./: .gitignore  README.md  build.sh  effect-whitelist.json  elm-package.json  elm.json  elm_package.json  get-fonts.sh  gzip.sh  history-fetcher.js  native-whitelist.json  nginx.conf  robots.txt  run-server.cabal  seed.sh  upgrade-docs.hs  upgrade-docs.sh  whitelist.json
assets/: fonts.css  style.css
assets/help/: design-guidelines.md  documentation-format.md
assets/highlight/: highlight.pack.js
assets/js/: jsonLoader.js
backend/: Main.hs  NativeWhitelist.hs  NewPackageList.hs  PackageSummary.hs  Path.hs  Routes.hs  ServeFile.hs
frontend/: Catalog.elm  ColorScheme.elm  Constants.elm  DesignGuidelines.elm  Documentation.elm  Error404.elm  Home.elm  Markdown.elm  Message.elm  Packages.elm  Skeleton.elm  TopBar.elm
frontend/Component/: Documentation.elm  DropDown.elm  Header.elm  Module.elm  ModuleDocs.elm  Package.elm  PackageDocs.elm  PackageList.elm  Packages.elm  TopBar.elm
frontend/Component/Package/: ModuleList.elm  Search.elm
frontend/Docs/: Library.elm
frontend/Native/: Markdown.js
frontend/Page/: DesignGuidelines.elm  DocumentationFormat.elm  Error.elm  Home.elm  Module.elm  ModuleDocs.elm  Package.elm  PackageDocs.elm  PackageList.elm  Packages.elm  Versions.elm
migration/: Crawl.hs  GetDates.hs  Migrate.hs  MoveDocs.hs  MoveElmJson.hs  MoveReadme.hs  Task.hs  UpdateJson.hs  migrate.cabal
monit/: package.conf  start.sh  stop.sh
src/backend/: Artifacts.hs  GitHub.hs  Gzip.hs  Helpers.hs  Http.hs  Legacy.hs  Main.hs  Memory.hs  NewPackageList.hs  PackageSummary.hs  Paths_elm.hs  Register.hs  Router.hs  Routes.hs  ServeFile.hs  ServeGzip.hs  Server.hs  Sitemap.hs  Whitelists.hs
src/backend/Data/ByteString/: Validate.hs
src/backend/Memory/: History.hs  Releases.hs  Timeline.hs
src/backend/Package/: Overview.hs  Path.hs  Register.hs  Releases.hs
src/backend/Server/: Error.hs  Router.hs
src/frontend/: ColorScheme.elm  Constants.elm  Docs.elm  Header.elm  Href.elm  Main.elm  Navigator.elm  Release.elm  Route.elm  Session.elm  Skeleton.elm  Version.elm
src/frontend/Component/: Blog.elm  Catalog.elm  CatalogSidebar.elm  Description.elm  Header.elm  Module.elm  ModuleDocs.elm  PackageDocs.elm  PackageList.elm  PackageNavigator.elm  PackageOverview.elm  PackagePreview.elm  PackageSearch.elm  PackageSidebar.elm  Search.elm  TopBar.elm
src/frontend/Component/Package/: Search.elm
src/frontend/Docs/: Decoder.elm  Description.elm  Entry.elm  History.elm  Module.elm  Name.elm  Package.elm  Summary.elm  Type.elm  Version.elm
src/frontend/Native/: Drag.js  Jump.js  Parse.js
src/frontend/Overview/: Constants.elm  Diff.elm  History.elm  Slider.elm
src/frontend/Overview/Component/: Changes.elm  Links.elm
src/frontend/Page/: Catalog.elm  Context.elm  DesignGuidelines.elm  Diff.elm  Docs.elm  DocumentationFormat.elm  Help.elm  Home.elm  Module.elm  NotFound.elm  Package.elm  PackageList.elm  PackageOverview.elm  PackageOverviewNew.elm  PreviewDocumentation.elm  Problem.elm  Search.elm
src/frontend/Page/Docs/: Block.elm
src/frontend/Page/Help/: DesignGuidelines.elm  DocumentationFormat.elm
src/frontend/Page/Search/: Entry.elm
src/frontend/Parse/: Combinators.elm  Type.elm
src/frontend/Session/: Query.elm  Resource.elm  Status.elm
src/frontend/Utils/: App.elm  Code.elm  FluidList.elm  Logo.elm  Markdown.elm  OneOrMore.elm  Path.elm  ProximityTree.elm
src/frontend/Utils/ProximityTree/: Optimizer.elm
src/utils/: GetDates.hs
tmp/: README.md  core.html  elm-exts.html  elm-list-extra.html  elm-signal-extra.html  elm-string-extra.html
