Name: elm-public-library
Version: 0.1

Synopsis:
  Server for hosting the Elm Public Library

Description:
  Generates web pages for docemuntation

Homepage: http://library.elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2013-2014 Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
  type:     git
  location: git://github.com/elm-lang/package.elm-lang.org.git

Executable run-server
  hs-source-dirs:
    src/backend

  Main-is:
    Main.hs

  ghc-options:
    -threaded -O2 -W -rtsopts

  Build-depends:
    base >=4.2 && <5,
    binary,
    blaze-html,
    blaze-markup,
    bytestring,
    cmdargs,
    containers,
    elm-compiler == 0.18.1,
    builder,
    directory,
    filepath,
    mtl,
    snap-core,
    snap-server,
    text,
    time,
    unordered-containers


Executable update-json
  hs-source-dirs:
    src/utils

  Main-is:
    UpdateJson.hs

  ghc-options:
    -threaded -O2 -W -rtsopts

  Build-depends:
    aeson,
    base >=4.2 && <5,
    bytestring,
    containers,
    directory,
    filepath,
    http-client,
    http-client-tls,
    iso8601-time,
    mtl,
    network,
    text,
    time,
    unordered-containers
