Name: run-server
Version: 1.0.0

Synopsis:
  The server for package.elm-lang.org

Description:
  Serve documentation, register packages, route people to downloads, etc.

Homepage: http://package.elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2013-present Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
  type:     git
  location: git://github.com/elm-lang/package.elm-lang.org.git

Executable run-server
  hs-source-dirs:
    src/backend

  Main-is:
    Main.hs

  ghc-options:
    -threaded -O2 -W -rtsopts

  Build-depends:
    base >=4.2 && <5,
    binary,
    blaze-html,
    blaze-markup,
    bytestring,
    cmdargs,
    containers,
    elm-compiler == 0.19.0,
    builder,
    directory,
    filepath,
    http-client,
    http-client-tls,
    http-types,
    io-streams,
    mtl,
    process,
    snap-core,
    snap-server,
    text,
    time,
    unordered-containers
