Name: migrate
Version: 0.1

Synopsis:
  Migrate all packages to 0.19 format

Description:
  Turn elm-package.json into elm.json, fix licenses, get publication dates, etc.

Homepage: http://package.elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2013-2014 Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
  type:     git
  location: git://github.com/elm/package.elm-lang.org.git


Executable migrate
  hs-source-dirs:
    ../migration
    ../src/backend
    ../../../compiler/compiler/src
    ../../../compiler/builder/src

  Main-is:
    Migrate.hs

  ghc-options:
    -threaded -O2 -W -rtsopts

  Build-depends:
    aeson,
    ansi-terminal,
    ansi-wl-pprint,
    base >=4.2 && <5,
    binary,
    bytestring,
    cmdargs,
    containers,
    directory,
    edit-distance,
    filepath,
    http-client,
    http-client-tls,
    http-types,
    iso8601-time,
    language-glsl,
    mtl,
    network,
    parsec,
    scientific,
    text,
    time,
    unordered-containers,
    utf8-string,
    vector
